--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,6 @@ Pyrogram>=0.16.0,<0.16.10
 TgCrypto>=1.1.1,<1.1.10
 youtube_dl
 megasdkrestclient>=0.1.1,<1.0.0
+#python-magic-bin==0.4.14
+lxml
+xdcc
